[SELC-5887] added test for user-sdk-event