@@ -3,11 +3,13 @@ package it.pagopa.selfcare.user;
 import it.pagopa.selfcare.user.model.OnboardedProduct;
 import it.pagopa.selfcare.user.model.TrackEventInput;
 import it.pagopa.selfcare.user.model.constants.OnboardedProductState;
+import lombok.extern.slf4j.Slf4j;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.util.*;
@@ -16,6 +18,7 @@ import java.util.stream.Collectors;
 import static java.util.Comparator.naturalOrder;
 import static java.util.Comparator.nullsLast;
 
+@Slf4j
 public class UserUtils {
 
     /**
@@ -93,40 +96,28 @@ public class UserUtils {
         int week = 60 * 60 * 24 * 7;
         String expiry = Long.toString(epoch + week);
 
-        String sasToken = null;
-        try {
-            String stringToSign = URLEncoder.encode(resourceUri, "UTF-8") + "\n" + expiry;
-            String signature = getHMAC256(key, stringToSign);
-            sasToken = "SharedAccessSignature sr=" + URLEncoder.encode(resourceUri, "UTF-8") + "&sig=" +
-                    URLEncoder.encode(signature, "UTF-8") + "&se=" + expiry + "&skn=" + keyName;
-        } catch (UnsupportedEncodingException e) {
-
-            e.printStackTrace();
-        }
-
+        String sasToken;
+        String stringToSign = URLEncoder.encode(resourceUri, StandardCharsets.UTF_8) + "\n" + expiry;
+        String signature = getHMAC256(key, stringToSign);
+        sasToken = "SharedAccessSignature sr=" + URLEncoder.encode(resourceUri, StandardCharsets.UTF_8) + "&sig=" +
+                URLEncoder.encode(signature, StandardCharsets.UTF_8) + "&se=" + expiry + "&skn=" + keyName;
         return sasToken;
     }
 
 
     public static String getHMAC256(String key, String input) {
-        Mac sha256_HMAC;
+        Mac sha256HMAC;
         String hash = null;
         try {
-            sha256_HMAC = Mac.getInstance("HmacSHA256");
-            SecretKeySpec secret_key = new SecretKeySpec(key.getBytes(), "HmacSHA256");
-            sha256_HMAC.init(secret_key);
+            sha256HMAC = Mac.getInstance("HmacSHA256");
+            SecretKeySpec secretKey = new SecretKeySpec(key.getBytes(), "HmacSHA256");
+            sha256HMAC.init(secretKey);
             Base64.Encoder encoder = Base64.getEncoder();
 
-            hash = new String(encoder.encode(sha256_HMAC.doFinal(input.getBytes("UTF-8"))));
+            hash = new String(encoder.encode(sha256HMAC.doFinal(input.getBytes(StandardCharsets.UTF_8))));
 
-        } catch (InvalidKeyException e) {
-            e.printStackTrace();
-        } catch (NoSuchAlgorithmException e) {
-            e.printStackTrace();
-        } catch (IllegalStateException e) {
-            e.printStackTrace();
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
+        } catch (InvalidKeyException | NoSuchAlgorithmException | IllegalStateException e) {
+            log.error("Exception: {}", e.getMessage(), e);
         }
 
         return hash;
